reading db fully functional. Added examples of inheritance and operator overloading.

--- a/SurgeryWard/makefile
+++ b/SurgeryWard/makefile
@@ -1,15 +1,20 @@
 COMP = g++ -std=c++11
+LIBS = -lsqlite3 -lpthread -ldl
 
 all: SurgeryWard 
 
-SurgeryWard: main.o nurse.o
-	$(COMP) main.o nurse.o -o SurgeryWard
+SurgeryWard: main.o patient.o nurse.o
+	$(COMP) main.o patient.o nurse.o -o SurgeryWard $(LIBS)
 
-main.o: main.cpp classes/nurse.h classes/patient.h classes/doctor.h classes/person.h 
-	$(COMP) -c main.cpp
+main.o: main.cpp classes/nurse.h classes/patient.h classes/doctor.h classes/person.h templates.h 
+	$(COMP) -c main.cpp $(LIBS)
+
+patient.o: classes/patient.cpp classes/patient.h
+	$(COMP) -c classes/patient.cpp
 
 nurse.o: classes/nurse.cpp classes/nurse.h
 	$(COMP) -c classes/nurse.cpp
+
 clean:
 	rm *.o classes/*.o sorts/*.o
 
