Storing nurses in a vector of pointers to an abstract base nurse class. Added some helpful files which I have learned with. Eventually these should be moved to an experimental_dir.

--- a/SurgeryWard/makefile
+++ b/SurgeryWard/makefile
@@ -1,12 +1,13 @@
 COMP = g++ -std=c++11
 LIBS = -lsqlite3 -lpthread -ldl
+SDLLIBS = -lSDL2 -lSDL2_image
 
 all: SurgeryWard 
 
-SurgeryWard: main.o patient.o nurse.o
-	$(COMP) main.o patient.o nurse.o -o SurgeryWard $(LIBS)
+SurgeryWard: main.o patient.o nurse.o 
+	$(COMP) main.o patient.o nurse.o -o SurgeryWard $(LIBS) $(SDLLIBS)
 
-main.o: main.cpp classes/nurse.h classes/patient.h classes/doctor.h classes/person.h templates.h 
+main.o: main.cpp classes/nurse.h classes/patient.h classes/doctor.h classes/person.h templates.h
 	$(COMP) -c main.cpp $(LIBS)
 
 patient.o: classes/patient.cpp classes/patient.h
@@ -14,7 +15,6 @@ patient.o: classes/patient.cpp classes/patient.h
 
 nurse.o: classes/nurse.cpp classes/nurse.h
 	$(COMP) -c classes/nurse.cpp
-
 clean:
 	rm *.o classes/*.o sorts/*.o
 
