made some improvements to sdl code, makefile, and added an experimental directory.

--- a/SurgeryWard/makefile
+++ b/SurgeryWard/makefile
@@ -1,20 +1,23 @@
 COMP = g++ -std=c++11
-LIBS = -lsqlite3 -lpthread -ldl
-SDLLIBS = -lSDL2 -lSDL2_image
+SQLLIBS = -lsqlite3 -lpthread -ldl
+SDLLIBS = -lSDL
 
 all: SurgeryWard 
 
-SurgeryWard: main.o patient.o nurse.o 
-	$(COMP) main.o patient.o nurse.o -o SurgeryWard $(LIBS) $(SDLLIBS)
+SurgeryWard: main.o patient.o nurse.o sdl.o
+	$(COMP) main.o patient.o nurse.o sdl.o -o SurgeryWard $(SDLLIBS) $(SQLLIBS)
 
-main.o: main.cpp classes/nurse.h classes/patient.h classes/doctor.h classes/person.h templates.h
-	$(COMP) -c main.cpp $(LIBS)
+main.o: main.cpp classes/nurse.h classes/patient.h classes/doctor.h classes/person.h templates.h graphics/sdl.h
+	$(COMP) -c main.cpp 
 
 patient.o: classes/patient.cpp classes/patient.h
 	$(COMP) -c classes/patient.cpp
 
 nurse.o: classes/nurse.cpp classes/nurse.h
 	$(COMP) -c classes/nurse.cpp
-clean:
-	rm *.o classes/*.o sorts/*.o
 
+sdl.o: graphics/sdl.cpp graphics/sdl.h
+	$(COMP) -c graphics/sdl.cpp
+
+clean:
+	rm *.o
